--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,5 +6,6 @@ services:
     build: 
       context: .
       dockerfile: Dockerfile
-      ports: 
-        - "5000:8000"
+    restart: always
+    ports: 
+      - "5000:8000"
